crates/wac-parser/tests/parser/fail/invalid-path-semver.wac
package foo:bar;

import i: foo:bar/baz@1;